@@ -1013,3 +1013,4 @@ seen. gmtime warning still there
 - Auth_Make fix for crypt method
 - Fixed a /time GMT offset bug under Win32 reported by Dave337
 - Documentation updates
+- Made a few updconf changes
